--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,15 @@
         }
     ],
     "keywords": [
-        "silverstripe", "foxystripe", "ecommerce", "inventory"
+        "silverstripe",
+        "foxystripe",
+        "ecommerce",
+        "inventory"
     ],
     "type": "silverstripe-vendormodule",
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=5.6",
+        "php": "^7.1",
         "dynamic/foxystripe": "^4.0@dev",
         "silverstripe/recipe-core": "^4.2",
         "silverstripe/vendor-plugin": "^1.0",
@@ -40,8 +43,8 @@
         "branch-alias": {
             "dev-master": "2.x-dev"
         },
-		"expose": [
-			"client/dist"
-		]
+        "expose": [
+            "client/dist"
+        ]
     }
 }
