--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "type": "silverstripe-vendormodule",
     "license": "BSD-3-Clause",
     "require": {
-        "php": "^7.1",
+        "php": "^7.1 || ^8.0",
         "dynamic/foxystripe": "^4.0@dev",
         "silverstripe/recipe-core": "^4.2",
         "silverstripe/vendor-plugin": "^1.0",
