fix: add VCS repos for foxystripe fork and foxyclient-php
CI needs VCS entries to resolve dynamic/foxystripe from fork
(with dynamic/foxyclient ^3.0) instead of Packagist upstream
(which still has foxycart/foxyclient ^2.0 / Guzzle 6).

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,16 @@
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "*"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/jsirish/foxystripe"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/dynamic/foxyclient-php"
+        }
+    ],
     "config": {
         "process-timeout": 600
     },
