fix: require dynamic/foxystripe ^4.1 for Guzzle 7 tag resolution

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "license": "BSD-3-Clause",
     "require": {
         "php": "^7.1 || ^8.0",
-        "dynamic/foxystripe": "^4.0@dev",
+        "dynamic/foxystripe": "^4.1",
         "silverstripe/recipe-core": "^4.2",
         "silverstripe/vendor-plugin": "^1.0",
         "unclecheese/display-logic": "^2.0@dev"
