--- a/composer.json
+++ b/composer.json
@@ -9,21 +9,36 @@
         }
     ],
     "keywords": [
-        "silverstripe", "foxystripe", "ecommerce", "inventory"
+        "silverstripe",
+        "foxystripe",
+        "ecommerce",
+        "inventory"
     ],
     "type": "silverstripe-vendormodule",
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=5.6",
-        "dynamic/foxystripe": "^4.0@dev",
+        "php": "^7.1 || ^8.0",
+        "dynamic/foxystripe": "^4.1",
         "silverstripe/recipe-core": "^4.2",
         "silverstripe/vendor-plugin": "^1.0",
         "unclecheese/display-logic": "^2.0@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "*"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/jsirish/foxystripe",
+            "no-api": true
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/dynamic/foxyclient-php",
+            "no-api": true
+        }
+    ],
     "config": {
         "process-timeout": 600
     },
@@ -40,8 +55,8 @@
         "branch-alias": {
             "dev-master": "2.x-dev"
         },
-		"expose": [
-			"client/dist"
-		]
+        "expose": [
+            "client/dist"
+        ]
     }
 }
