--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,5 @@ on:
 jobs:
   ci:
     name: CI
-    uses: dynamic/silverstripe-ci/.github/workflows/ci.yml@v4
+    uses: silverstripe/gha-ci/.github/workflows/ci.yml@v2
+
