--- a/composer.json
+++ b/composer.json
@@ -17,23 +17,15 @@
     "type": "silverstripe-vendormodule",
     "license": "BSD-3-Clause",
     "require": {
-        "php": "^7.1 || ^8.0",
-        "dynamic/foxystripe": "^4.0",
-        "silverstripe/recipe-core": "^4.2",
-        "silverstripe/vendor-plugin": "^1.0",
-        "unclecheese/display-logic": "^2.0@dev"
+        "php": "^8.1",
+        "dynamic/foxystripe": "^5.0",
+        "silverstripe/recipe-core": "^5.0",
+        "unclecheese/display-logic": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "*"
+        "phpunit/phpunit": "^9.6",
+        "squizlabs/php_codesniffer": "^3.0"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/dynamic/foxyclient-php",
-            "no-api": true
-        }
-    ],
     "config": {
         "process-timeout": 600
     },
@@ -43,8 +35,6 @@
             "Dynamic\\FoxyStripe\\Test\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "extra": {
         "installer-name": "foxystripe-inventory",
         "expose": [
