fix: add missing VCS repositories for foxystripe and foxyclient
The repositories section with VCS references to dynamic/foxystripe and
dynamic/foxyclient-php was dropped during the SS5 upgrade. These packages
are not on Packagist and require VCS repository definitions.

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,18 @@
             "Dynamic\\FoxyStripe\\Test\\": "tests/"
         }
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/dynamic/foxystripe",
+            "no-api": true
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/dynamic/foxyclient-php",
+            "no-api": true
+        }
+    ],
     "extra": {
         "installer-name": "foxystripe-inventory",
         "expose": [
