--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -2,12 +2,17 @@
 <ruleset name="Silverstripe">
     <description>CodeSniffer ruleset for Silverstripe coding conventions.</description>
 
-	<file>src</file>
-	<file>tests</file>
+    <file>src</file>
+    <file>tests</file>
+
+    <!-- Only report errors, not warnings (line length, constant visibility are informational) -->
+    <arg value="n"/>
 
     <!-- base rules are PSR-12 -->
-    <rule ref="PSR12" >
+    <rule ref="PSR12">
         <!-- Silverstripe uses PascalCase for controller actions and template accessors -->
         <exclude name="PSR1.Methods.CamelCapsMethodName.NotCamelCaps" />
+        <!-- Legacy class names -->
+        <exclude name="Squiz.Classes.ValidClassName.NotPascalCase" />
     </rule>
 </ruleset>
